change to top position

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,7 +3,7 @@
    ========================================================================== */
 .accept-cookies {
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
     min-height: 30px;
